fix: align timeBlock div

--- a/src/views/components/common/CalendarGrid/CalendarGrid.module.scss
+++ b/src/views/components/common/CalendarGrid/CalendarGrid.module.scss
@@ -60,11 +60,8 @@
 
 .timeBlock {
     display: flex;
-    width: 50px;
-    height: 40.279px;
-    min-width: 50px;
-    max-width: 50px;
-    min-height: 40px;
+    width: auto;
+    height: auto;
     flex-direction: column;
     align-items: flex-end;
 
@@ -84,6 +81,7 @@
         height: 6.6px;
         align-self: stretch;
         margin-top: -10px;
+        margin-right: 10px;
         margin-bottom: 0;
 
         /* Type scale/small */
